--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       }
       p {
         color: white;
+        max-width: 1000px;
       }
     </style>
   <link rel="shortcut icon" href="favicon.ico"></head>
@@ -26,9 +27,9 @@
       <canvas></canvas>
       <div>
         <p>
-          The game is simple. You kill enemies by jumping on top of them. Once
-          you kill the enemy you can click space button and turn yourself into
-          that character
+          The game is simple. Use W, A, D, S to Jump, go left, go right and go
+          down. You kill enemies by jumping on top of them. Once you kill the
+          enemy you can click space button and turn yourself into that character
         </p>
       </div>
       <div id="character-list"></div>
